# langextract_samples

./: .gitignore  README.md  pyproject.toml
dataset/: medication.json  medication_ja.json  medication_ner.json  medication_relationship.json  medication_relationship_ja.json  romeo_quickstart.json  romeo_quickstart_ja.json
docs/: comparison.html  index.html  jsonl_viewer.html  medication.jsonl  medication__gemini-2.5-flash-lite__pass1.jsonl  medication__gemini-2.5-flash-lite__pass2.jsonl  medication__gemini-2.5-flash__pass1.html  medication__gemini-2.5-flash__pass1.jsonl  medication__gemini-2.5-pro__pass1.jsonl  medication_ja.jsonl  medication_ja__gemini-2.5-flash-lite__pass1.html  medication_ja__gemini-2.5-flash-lite__pass1.jsonl  medication_ja__gemini-2.5-flash-lite__pass2.jsonl  medication_ja__gemini-2.5-flash__pass1.html  medication_ja__gemini-2.5-flash__pass1.jsonl  medication_ja__gemini-2.5-pro__pass1.jsonl  medication_ner.jsonl  medication_relationship.jsonl  medication_relationship__gemini-2.5-flash-lite__pass1.jsonl  medication_relationship__gemini-2.5-flash-lite__pass2.html  medication_relationship__gemini-2.5-flash-lite__pass2.jsonl  medication_relationship__gemini-2.5-flash__pass1.jsonl  medication_relationship__gemini-2.5-pro__pass1.html  medication_relationship__gemini-2.5-pro__pass1.jsonl  medication_relationship_ja.jsonl  medication_relationship_ja__gemini-2.5-flash-lite__pass1.html  medication_relationship_ja__gemini-2.5-flash-lite__pass1.jsonl  medication_relationship_ja__gemini-2.5-flash-lite__pass2.jsonl  medication_relationship_ja__gemini-2.5-flash__pass1.jsonl  medication_relationship_ja__gemini-2.5-pro__pass1.jsonl  romeo_juliet_basic.html  romeo_quickstart.jsonl  romeo_quickstart__gemini-2.5-flash-lite__pass1.jsonl  romeo_quickstart__gemini-2.5-flash-lite__pass2.jsonl  romeo_quickstart__gemini-2.5-flash__pass1.html  romeo_quickstart__gemini-2.5-flash__pass1.jsonl  romeo_quickstart__gemini-2.5-pro__pass1.html  romeo_quickstart__gemini-2.5-pro__pass1.jsonl  romeo_quickstart_ja.jsonl  romeo_quickstart_ja__gemini-2.5-flash-lite__pass1.jsonl  (+3 more)
(+12 files in other folders)
