[project]
name = "langextract-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langextract",
]

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langextract_samples"]

[tool.hatch.build.targets.sdist]
include = [
    "src/langextract_samples",
    "README.md",
    "pyproject.toml",
]

[project.scripts]
run-langextract-dataset = "langextract_samples.examples_cli:main"
